[package]
name = "qv"
version = "0.1.0"
authors = ["maxgurewitz <maxthegeek1@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-rc"
jsonwebtoken = "6.0.1"
serde = "1.0.*"
serde_derive = "1.0.*"
diesel = { version = "1.4.*", features = ["postgres", "r2d2"] }
actix-service = "0.4.0"
futures = "0.1.27"
actix-web-httpauth = "0.2.0"
dotenv = "0.9.*"
r2d2 = "0.8.*"
rand = "0.6.*"
