[package]
name = "qv"
version = "0.1.0"
authors = ["maxgurewitz <maxthegeek1@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "1.0.0-rc", features = ["ssl"] }
serde = { version = "1.0.*", features = ["rc"] }
serde_json = "1.0"
actix-cors = "0.1.*"
serde_derive = "1.0.*"
actix-utils = "0.4.*"
diesel = { version = "1.4.*", features = ["postgres", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
actix-service = "0.4.0"
futures = "0.1"
dotenv = "0.9.*"
r2d2 = "0.8.*"

[dev-dependencies]
reqwest = "0.9"

[lib]
name = "qv"
path = "src/lib.rs"
